--- a/boards/supermini/bt_mouse_demo/bt_mouse_demo_nrf52840.dts
+++ b/boards/supermini/bt_mouse_demo/bt_mouse_demo_nrf52840.dts
@@ -58,6 +58,10 @@
 			label = "BTN_3";
 		};
 	};
+
+	zephyr,user {
+		io-channels = <&adc 0>, <&adc 5>;
+	};
 };
 
 &flash0 {
@@ -118,4 +122,29 @@ zephyr_udc0: &usbd {
 
 &systick {
 	status = "disabled";
+};
+
+&adc {
+	status = "okay";
+
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	channel@0 {
+		reg = <0>;
+		zephyr,gain = "ADC_GAIN_1_6";
+		zephyr,reference = "ADC_REF_INTERNAL";
+		zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
+		zephyr,input-positive = <NRF_SAADC_AIN0>; /* P0.02 */
+		zephyr,resolution = <12>;
+	};
+
+	channel@5 {
+		reg = <5>;
+		zephyr,gain = "ADC_GAIN_1_5";
+		zephyr,reference = "ADC_REF_INTERNAL";
+		zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
+		zephyr,input-positive = <NRF_SAADC_AIN5>; /* P0.29 */
+		zephyr,resolution = <12>;
+	};
 };
