--- a/prj.conf
+++ b/prj.conf
@@ -16,7 +16,7 @@ CONFIG_BT_DEVICE_APPEARANCE=962
 CONFIG_BT_BAS=y
 CONFIG_BT_HIDS=y
 CONFIG_BT_HIDS_MAX_CLIENT_COUNT=2
-CONFIG_BT_HIDS_DEFAULT_PERM_RW_ENCRYPT=y
+CONFIG_BT_HIDS_DEFAULT_PERM_RW_ENCRYPT=n #y
 CONFIG_BT_GATT_UUID16_POOL_SIZE=40
 CONFIG_BT_GATT_CHRC_POOL_SIZE=20
 
